# opencv_samples

./: CMakeLists.txt
examples/: 3calibration.cpp  application_trace.cpp  asift.cpp  bgfg_segm.cpp  calibration.cpp  cloning_demo.cpp  cloning_gui.cpp  connected_components.cpp  contours2.cpp  convexhull.cpp  cout_mat.cpp  create_mask.cpp  dbt_face_detection.cpp  delaunay2.cpp  demhist.cpp  detect_blob.cpp  detect_mser.cpp  dft.cpp  digits_lenet.cpp  digits_svm.cpp  dis_opticalflow.cpp  distrans.cpp  drawing.cpp  edge.cpp  ela.cpp  em.cpp  epipolar_lines.cpp  essential_mat_reconstr.cpp  facedetect.cpp  facial_features.cpp  falsecolor.cpp  fback.cpp  ffilldemo.cpp  filestorage.cpp  fitellipse.cpp  flann_search_dataset.cpp  grabcut.cpp  image_alignment.cpp  imagelist_creator.cpp  imagelist_reader.cpp  (+46 more)
tutorial/HighGUI/: AddingImagesTrackbar.cpp  BasicLinearTransformsTrackbar.cpp
tutorial/Histograms_Matching/: EqualizeHist_Demo.cpp  MatchTemplate_Demo.cpp  calcBackProject_Demo1.cpp  calcBackProject_Demo2.cpp  calcHist_Demo.cpp  compareHist_Demo.cpp
tutorial/ImgProc/: BasicLinearTransforms.cpp  Morphology_1.cpp  Morphology_2.cpp  Threshold.cpp  Threshold_inRange.cpp
tutorial/ImgTrans/: CannyDetector_Demo.cpp  Geometric_Transforms_Demo.cpp  HoughCircle_Demo.cpp  HoughLines_Demo.cpp  Laplace_Demo.cpp  Remap_Demo.cpp  Sobel_Demo.cpp  copyMakeBorder_demo.cpp  filter2D_demo.cpp  houghcircles.cpp  houghlines.cpp  imageSegmentation.cpp
tutorial/ShapeDescriptors/: findContours_demo.cpp  generalContours_demo1.cpp  generalContours_demo2.cpp  hull_demo.cpp  moments_demo.cpp  (+1 more)
(+100 files in other folders)
